k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bluegreen-demo-service
  namespace: sbx
  labels:
    app: bluegreen-demo
spec:
  selector:
    app: bluegreen-demo
    version: green  # This will be switched between blue and green
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
